tryphon_macros/tests/ui/fail/decoder_unit_struct.rs
use tryphon::ConfigValueDecoder;

#[derive(ConfigValueDecoder)]
struct BadNewtype;

fn main() {}
