tryphon_macros/tests/ui/fail/decoder_unit_struct.stderr
error: You can only derive ConfigValueDecoder for newtype structs with a single field
 --> tests/ui/fail/decoder_unit_struct.rs:3:10
  |
3 | #[derive(ConfigValueDecoder)]
  |          ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ConfigValueDecoder` (in Nightly builds, run with -Z macro-backtrace for more info)
